--- a/.github/workflows/podman-build-publish.yml
+++ b/.github/workflows/podman-build-publish.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+  schedule:
+    # Runs at 02:00 UTC every Tuesday.
+    - cron: "0 2 * * 2"
 
 jobs:
   build-and-push:
